recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  current(steps)
  avance(length)
  droite(angle)
  avance(length)
  tree(steps-1,length*shrink,angle,shrink)
  gauche(2*angle)
  tree(steps-1,length*shrink,angle,shrink)
  droite(angle)
  current(setps)
  recule(length)
  
  
}